# anki-mcp-server

./: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
.github/workflows/: build-image.yaml
src/anki_mcp_server/: __init__.py  anki_connect.py  main.py  server.py  settings.py
src/anki_mcp_server/decks/: models.py  tools.py
src/anki_mcp_server/models/: models.py  tools.py
src/anki_mcp_server/notes/: models.py  tools.py
src/anki_mcp_server/sync/: models.py  tools.py
