[project]
name = "anki-mcp-server"
version = "0.1.0"
description = "A Python MCP server to integrate with Anki via the AnkiConnect plugin using FastMCP with HTTP transport"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.1",
    "httpx>=0.28.1",
    "pydantic",
    "uvicorn>=0.35.0",
]

[project.scripts]
anki-mcp-server = "anki_mcp_server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anki_mcp_server"]
